Código atualizado, firebase aplicado
